--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Mon Feb 28 14:24:38 KST 2022
-sdk.dir=C\:\\Users\\gch05\\AppData\\Local\\Android\\Sdk
+sdk.dir=C\:\\Users\\rlarl\\AppData\\Local\\Android\\Sdk
