Add reset function

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,8 @@
         <activity android:name=".FirstActivity"/>
         <activity android:name=".FunctionActivity"/>
         <activity android:name=".MainActivityTestDB"/>
+        <activity android:name=".ResetPopupActivity"
+            android:theme="@android:style/Theme.Dialog" />
     </application>
 
 </manifest>
