--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,8 +30,9 @@
             android:theme="@android:style/Theme.Dialog" />
         <activity android:name=".EndPopupActivity"
             android:theme="@android:style/Theme.Dialog" />
+        <activity android:name=".AlarmPopupActivity"
+            android:theme="@android:style/Theme.Holo.Light.Dialog" />
 
-        <activity android:name=".AlarmActivity" />
         <receiver android:name=".DeviceBootReceiver"
             android:enabled="false"
             android:exported="false">
